--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "checks",
-  "version": "0.0.0",
-  "description": "",
+  "name": "this-is",
+  "version": "0.0.1",
+  "description": "An interface for various checks with ability to stringify to readable format.",
   "main": "index.js",
   "scripts": {
     "test": "mocha **/*.test.js",
     "test-phantomjs": "phantomjs node_modules/mocha-phantomjs-core/mocha-phantomjs-core.js test/index.html"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "okneigres@gmail.com",
+  "license": "MIT",
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
