--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An interface for various checks with ability to stringify to readable format.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha **/*.test.js",
+    "test": "mocha **/*.test.js && npm run test-phantomjs",
     "test-phantomjs": "phantomjs node_modules/mocha-phantomjs-core/mocha-phantomjs-core.js test/index.html"
   },
   "author": "okneigres@gmail.com",
